--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "JL Martin-Navarro"
+  name             : "Jose Luis Martin-Navarro"
   avatar           : "profile.png"
   bio              : "Software Developer"
   location         : "Spain"
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "linkedin.com/in/jose-luis-martin"
+  linkedin         : "jose-luis-martin"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
