--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jose Luis Martin-Navarro"
-  avatar           : "profile.png"
+  avatar           : "profile2.JPG"
   bio              : "Software Developer"
   location         : "Spain"
   employer         :
