--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jose Luis Martin-Navarro"
   avatar           : "profile2.JPG"
-  bio              : "Software Developer"
+  bio              : "Teaching Assistant and Master's degree student in Security and Cloud Computing (SECCLO - Erasmus Mundus) at Aalto University."
   location         : "Spain"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
