--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jose Luis Martin-Navarro"
-  avatar           : "profile2.JPG"
+  avatar           : "untitled111.png"
   bio              : "Teaching Assistant and Master's degree student in Security and Cloud Computing (SECCLO - Erasmus Mundus) at Aalto University."
   location         : "Spain"
   employer         :
